Basic functioning UX with mantine theming

--- a/src/components/dashboard/map/components/TreeItem/TreeItem.module.css
+++ b/src/components/dashboard/map/components/TreeItem/TreeItem.module.css
@@ -32,7 +32,7 @@
         padding: 0;
         height: 8px;
         border-color: #2389ff;
-        background-color: #56a1f8;
+        background-color: var(--mantine-color-dark-7);
 
         &:before {
           position: absolute;
@@ -73,10 +73,12 @@
   display: flex;
   align-items: center;
   padding: var(--vertical-padding) 10px;
-  background-color: #fff;
-  border: 1px solid #dedede;
-  color: #222;
+  background-color: var(--mantine-color-dark-7);
+  border: 1px solid var(--mantine-color-dark-4);
+  color: white;
   box-sizing: border-box;
+  border-radius: 4px;
+  margin: 8px 0;
 }
 
 .Text {
